sterlang/examples/neg/src/n08.erlt
-module(n08).
-export([unBox/2, name/1]).

-enum option(A) :: (none, some{A}).
%% simulating it via Variant
-enum recRec1(A) :: (recRec1{A, option(A)}).

getOrElse(Opt, Alt) ->
  case Opt of
      option.some{X} -> X;
      option.none -> Alt
  end.

%% the type for rec cannot be expressed without recursion
name(RecRec) ->
  case RecRec of
    recRec1.recRec1{X, _} -> X
  end.

next(RecRec) ->
   case RecRec of
      recRec1.recRec1{_, Y} -> Y
   end.

%% this also goes to recursive types
unBox(Rec, _) ->
  getOrElse(next(Rec), Rec).
